<resources>
    <string name="app_name">HBL</string>
    <string name="title_games">Games</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_analysis">Analysis</string>
    <string name="game_data">data</string>
    <string name="play_by_play">PLAY BY PLAY</string>
    <string name="player">Player</string>
    <string name="time">Time</string>
    <string name="score">Score</string>
    <string name="rebound">Rebound</string>
    <string name="assist">Assist</string>

    <string name="position">Pos</string>
    <string name="points">Pts</string>
    <string name="reb_o">O</string>
    <string name="reb_d">D</string>
    <string name="reb">Tot</string>
    <string name="ast">As</string>
    <string name="stl">St</string>
    <string name="blk">Bs</string>
    <string name="pfoul">Pf</string>
    <string name="m_a">M/A</string>
    <string name="percontage">%</string>
    <string name="turnover">To</string>

    <string name="two_pts">2PTS</string>
    <string name="three_pts">3PTS</string>
    <string name="ft">FT</string>

    <string name="q1">Q1 </string>
    <string name="q2">Q2 </string>
    <string name="q3">Q3 </string>
    <string name="q4">Q4 </string>
    <string name="ot">Ot </string>
    <string name="tot">TOT</string>

    <string name="team">Team</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="raking">Raking</string>

    <string name="personal">Personal</string>
    <string name="group">Group</string>
    <string name="team_man">"Man's Group"</string>
    <string name="team_woman">"Woman's Group"</string>
    <string name="qualifying">Qualifying</string>
    <string name="preliminaries">Preliminaries</string>
    <string name="remach">Remach</string>
    <string name="semi_final">Semi-Final</string>
    <string name="finals">Finals</string>

    <string name="offensive_score">Offensive Score</string>
    <string name="defensive_score">Defensive Score</string>
    <string name="two_pointer">Two Pointer</string>
    <string name="three_pointer">Three Pointer</string>

    <string name="team2">Team</string>
    <string name="game_completed">Game Completed</string>
    <string name="ppg">PPG</string>
    <string name="rank">RANK</string>

    <string name="all_games">All Games</string>
    <string name="no_games">No Game Data</string>

</resources>
