<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:background="#CECECE">
        <TableRow
            android:layout_marginTop="6.435pt"
            android:layout_marginBottom="5.4pt"
            >
            <TextView
                android:text="@string/player"
                android:layout_width="73.35pt"
                android:textSize="6.3pt"
                android:textStyle="bold"
                android:textColor="#797979"
                android:layout_marginLeft="8.415pt"
                />
            <TableLayout
                android:layout_width="85.185pt"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:background="#CECECE"
                android:layout_marginRight="19.35pt">
                <TableRow >
                    <TextView
                        android:text="@string/time"
                        android:textSize="6.3pt"
                        android:textStyle="bold"
                        android:textColor="#797979"
                        android:layout_margin="2dip"/>
                    <TextView
                        android:text="@string/score"
                        android:textSize="6.3pt"
                        android:textStyle="bold"
                        android:textColor="#797979"
                        android:layout_margin="2dip"/>
                    <TextView
                        android:text="@string/rebound"
                        android:textSize="6.3pt"
                        android:textStyle="bold"
                        android:textColor="#797979"
                        android:layout_margin="2dip"/>
                    <TextView
                        android:text="@string/assist"
                        android:textSize="6.3pt"
                        android:textStyle="bold"
                        android:textColor="#797979"
                        android:layout_margin="2dip"/>
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>
    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:indicatorLeft="171pt"
        />
</LinearLayout>