<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="36pt"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="157.635pt"
            android:layout_height="21.6pt"
            android:layout_marginLeft="11.565pt"
            android:layout_marginRight="17.1pt"
            android:layout_marginTop="7.965pt"
            android:layout_marginBottom="6.435pt">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <com.asana.hbl.views.CircularImageView
                    android:id="@+id/iv_team"
                    android:layout_width="21.6pt"
                    android:layout_height="21.6pt" />
                <TextView
                    android:id="@+id/tv_team_name"
                    android:layout_marginLeft="3.456pt"
                    android:layout_marginTop="4.635pt"
                    android:layout_marginBottom="5.256pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="5.535pt"
                    android:text="Team Name"
                    android:gravity="center"
                    android:textColor="#53586A"
                    android:layout_toEndOf="@+id/iv_team" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_win"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="8.235pt"
                android:layout_weight="3"
                android:text="@string/win"
                android:gravity="center_vertical"
                android:textColor="#040404"/>
            <TextView
                android:id="@+id/tv_lose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="8.235pt"
                android:layout_weight="3"
                android:text="@string/lose"
                android:gravity="center"
                android:textColor="#040404"/>
            <TextView
                android:id="@+id/tv_raking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="8.235pt"
                android:layout_weight="3"
                android:text="@string/raking"
                android:gravity="right|center_vertical"
                android:textColor="#040404"/>
        </LinearLayout>
    </RelativeLayout>