<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <RelativeLayout
        android:id="@+id/drop_menu_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/drop_menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.615pt"
            android:layout_marginTop="11.115pt"
            android:layout_marginBottom="12.285pt"
            android:clickable="true"
            android:spinnerMode="dropdown">
            <TextView
                android:id="@+id/tv1"
                android:textColor="@color/colorCustomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="menu1"
                android:textSize="7.515pt"/>
            <ImageView
                android:id="@+id/iv1"
                android:layout_width="5.265pt"
                android:layout_height="3.285pt"
                android:layout_toRightOf="@+id/tv1"
                android:background="@mipmap/drop_down_arrow"
                android:layout_marginLeft="7.2pt"
                android:layout_marginTop="3.015pt"
                android:layout_marginBottom="0.9pt"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/drop_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/drop_menu1"
            android:layout_marginLeft="28.665pt"
            android:layout_marginTop="11.115pt"
            android:layout_marginBottom="12.285pt"
            android:clickable="true"
            android:spinnerMode="dropdown">
            <TextView
                android:id="@+id/tv2"
                android:textColor="@color/colorCustomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="menu1"
                android:textSize="7.515pt"/>
            <ImageView
                android:id="@+id/iv2"
                android:layout_width="5.265pt"
                android:layout_height="3.285pt"
                android:layout_toRightOf="@+id/tv2"
                android:background="@mipmap/drop_down_arrow"
                android:layout_marginLeft="7.2pt"
                android:layout_marginTop="3.015pt"
                android:layout_marginBottom="0.9pt"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#808080">
        <LinearLayout
            android:layout_width="157.635pt"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11.565pt"
            android:layout_marginRight="17.1pt"
            android:layout_marginTop="4.05pt"
            android:layout_marginBottom="2.565pt"
            >
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:textSize="5.985pt"
               android:layout_weight="2"
               android:text="@string/team"
               android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="5.985pt"
                android:layout_weight="3"
                android:text="@string/win"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="5.985pt"
                android:layout_weight="3"
                android:text="@string/lose"
                android:gravity="center"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="5.985pt"
                android:layout_weight="3"
                android:text="@string/raking"
                android:gravity="right"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5DDE5"
        android:layout_alignParentBottom="true"/>
</LinearLayout>