<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/rl1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_radius_3"
        >
        <RelativeLayout
            android:id="@+id/drop_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="11.25pt"
            android:layout_marginLeft="7.065pt"
            android:layout_marginTop="9.315pt"
            android:clickable="true"
            android:spinnerMode="dropdown">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="menu1"
                android:gravity="center"
                android:textColor="@color/colorCustomTitle"
                android:textSize="7.515pt" />

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="5.265pt"
                android:layout_height="3.285pt"
                android:layout_marginBottom="2.115pt"
                android:layout_marginLeft="3.285pt"
                android:layout_marginTop="3.015pt"
                android:layout_toRightOf="@+id/tv1"
                android:background="@mipmap/drop_down_arrow"  />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/drop_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="11.25pt"
            android:layout_marginLeft="7.065pt"
            android:layout_marginTop="9.315pt"
            android:clickable="true"
            android:spinnerMode="dropdown">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="menu1"
                android:gravity="center"
                android:textColor="@color/colorCustomTitle"
                android:textSize="7.515pt" />

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="5.265pt"
                android:layout_height="3.285pt"
                android:layout_marginBottom="2.115pt"
                android:layout_marginLeft="3.285pt"
                android:layout_marginTop="3.015pt"
                android:layout_toRightOf="@+id/tv2"
                android:background="@mipmap/drop_down_arrow"  />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/drop_menu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="11.25pt"
            android:layout_marginLeft="7.065pt"
            android:layout_marginTop="9.315pt"
            android:clickable="true"
            android:spinnerMode="dropdown">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="menu1"
                android:gravity="center"
                android:textColor="@color/colorCustomTitle"
                android:textSize="7.515pt" />

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="5.265pt"
                android:layout_height="3.285pt"
                android:layout_marginBottom="2.115pt"
                android:layout_marginLeft="3.285pt"
                android:layout_marginTop="3.015pt"
                android:layout_toRightOf="@+id/tv3"
                android:background="@mipmap/drop_down_arrow"  />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabLayout
            android:id="@+id/simpleTabLayout"
            android:layout_width="match_parent"
            android:layout_height="29.835pt"
            android:background="#E5E5E5"
            android:textSize="7.515pt"
            app:tabIndicatorColor="@color/colorCustomTabTextSelected"
            app:tabIndicatorHeight="3.285pt"
            app:tabMinWidth="45.45pt"
            app:tabMode="scrollable"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#808080"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/item_title1"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11.565pt"
                android:layout_marginTop="3.15pt"
                android:layout_marginBottom="2.7pt"
                android:text="@string/team2"
                android:textSize="5.985pt"
                />
            <TextView
                android:id="@+id/item_title2"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.15pt"
                android:layout_marginBottom="2.7pt"
                android:gravity="center"
                android:text="@string/game_completed"
                android:textSize="5.985pt"
                />
            <TextView
                android:id="@+id/item_title3"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.15pt"
                android:layout_marginBottom="2.7pt"
                android:gravity="center"
                android:text="MPG"
                android:textSize="5.985pt"
                />
            <TextView
                android:id="@+id/item_title4"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.15pt"
                android:layout_marginBottom="2.7pt"
                android:gravity="center"
                android:text="@string/ppg"
                android:textSize="5.985pt"
                />
            <TextView
                android:id="@+id/item_title5"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.15pt"
                android:layout_marginBottom="2.7pt"
                android:gravity="center"
                android:text="@string/rank"
                android:textSize="5.985pt"
                />
        </LinearLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E5DDE5"
            android:layout_alignParentBottom="true"
            />
    </LinearLayout>
</RelativeLayout>