<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_radius_4">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="14.985pt"
        android:layout_marginTop="24.435pt">
        <View
            android:layout_width="15.165pt"
            android:layout_height="14.985pt"
            android:layout_marginLeft="11.115pt"
            android:id="@+id/iv11"
             />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.85pt"
            android:layout_marginRight="9.9pt"
            android:layout_toRightOf="@+id/iv11"
            android:background="#10682F2F">
            <TextView
                android:id="@+id/tv12"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/q1"
                android:textColor="#595073"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv13"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/q2"
                android:textColor="#595073"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv14"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/q3"
                android:textColor="#595073"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv15"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/q4"
                android:textColor="#595073"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv16"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/ot"
                android:textColor="#595073"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv17"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/tot"
                android:textColor="#595073"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="14.985pt"
        android:layout_marginTop="5.535pt"
        android:layout_marginLeft="11.115pt">
        <tw.org.ctssf.app.android.views.CircularImageView
            android:layout_width="15.165pt"
            android:layout_height="14.985pt"
            android:id="@+id/iv21"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_marginLeft="5.85pt"
            android:layout_marginRight="9.9pt"
            android:layout_toRightOf="@+id/iv21">
            <TextView
                android:id="@+id/tv22"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="22"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />

            <TextView
                android:id="@+id/tv23"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="14.985pt"
                android:gravity="center"
                android:text="23"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv24"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="24"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv25"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="25"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv26"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="26"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv27"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="27"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="14.985pt"
        android:layout_marginTop="5.535pt"
        android:layout_marginLeft="11.115pt"
        android:layout_marginBottom="8.865pt">
        <tw.org.ctssf.app.android.views.CircularImageView
            android:layout_width="15.165pt"
            android:layout_height="14.985pt"
            android:id="@+id/iv31"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_marginLeft="5.85pt"
            android:layout_marginRight="9.9pt"
            android:layout_toRightOf="@+id/iv31">
            <TextView
                android:id="@+id/tv32"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="32"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv33"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="33"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv34"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="34"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv35"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="35"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv36"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="36"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
            <TextView
                android:id="@+id/tv37"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="37"
                android:textColor="#020202"
                android:textSize="6pt"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="14.985pt"
                />
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.315pt"
        android:background="#E5DDE5"
        android:orientation="horizontal">
    </View>
    <!--
    <LinearLayout
        tw.org.ctssf.app.android:layout_width="match_parent"
        tw.org.ctssf.app.android:layout_height="wrap_content"
        tw.org.ctssf.app.android:layout_margin="0.315pt"
        tw.org.ctssf.app.android:background="#E5DDE5"
        tw.org.ctssf.app.android:orientation="horizontal">

        <TextView
            tw.org.ctssf.app.android:id="@+id/team_home"
            tw.org.ctssf.app.android:layout_width="match_parent"
            tw.org.ctssf.app.android:layout_height="24.795pt"
            tw.org.ctssf.app.android:layout_margin="0.315pt"
            tw.org.ctssf.app.android:layout_weight="1"
            tw.org.ctssf.app.android:background="@tw.org.ctssf.app.android:color/white"
            tw.org.ctssf.app.android:gravity="center"
            tw.org.ctssf.app.android:text="Team Home"
            tw.org.ctssf.app.android:textColor="#8C4141"
            tw.org.ctssf.app.android:textSize="4.95pt"
            tw.org.ctssf.app.android:textStyle="bold" />

        <TextView
            tw.org.ctssf.app.android:id="@+id/team_away"
            tw.org.ctssf.app.android:layout_width="match_parent"
            tw.org.ctssf.app.android:layout_height="24.795pt"
            tw.org.ctssf.app.android:layout_margin="0.315pt"
            tw.org.ctssf.app.android:layout_weight="1"
            tw.org.ctssf.app.android:background="@tw.org.ctssf.app.android:color/white"
            tw.org.ctssf.app.android:gravity="center"
            tw.org.ctssf.app.android:text="Team Away"
            tw.org.ctssf.app.android:textColor="#8C4141"
            tw.org.ctssf.app.android:textSize="4.95pt"
            tw.org.ctssf.app.android:textStyle="bold" />
    </LinearLayout>
    -->

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
         />
</LinearLayout>